# ionic-conference-app

./: .angular-cli.json  .angulardoc.json  .bazelrc  .browserslistrc  .eslintrc  .eslintrc.json  .firebaserc  .gitignore  .stylelintrc.yml  CONTRIBUTING.md  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  capacitor.config.json  capacitor.config.ts  changeList.json  config.xml  cypress.config.ts  firebase.json  generate-h2-push.js  gulpfile.js  ionic-conference-app.jsproj  ionic-conference-app.sln  ionic.config.js  ionic.config.json  ionic.project  ngsw-config.json  package-lock.json  package.json  server.ts  taco.json  tsconfig.json  tsconfig.spec.json  tsd.json  tslint.json  typings.json  webpack.config.js  webpack.server.config.js
src/: BUILD.bazel  declarations.d.ts  global.scss  index.html  karma.conf.js  main.prod.ts  main.ts  manifest.json  polyfills.modern.ts  polyfills.ts  require.config.js  rxjs_shims.js  service-worker.js  test.ts  tsconfig.app.json  tsconfig.modern.app.json  tsconfig.spec.json
src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  app.routes.ts  app.scss  app.server.module.ts  app.template.html  models.ts
src/app/components/agenda-avatars/: agenda-avatars.component.html  agenda-avatars.component.scss  agenda-avatars.component.spec.ts  agenda-avatars.component.ts  agenda-avatars.module.ts
src/app/components/agenda-card/: agenda-card.component.html  agenda-card.component.scss  agenda-card.component.spec.ts  agenda-card.component.ts  agenda-card.module.ts
src/app/components/permissions-modal/: permissions-modal.component.html  permissions-modal.component.scss  permissions-modal.component.spec.ts  permissions-modal.component.ts  permissions-modal.module.ts
src/app/components/speaker-card/: speaker-card.component.html  speaker-card.component.scss  speaker-card.component.spec.ts  speaker-card.component.ts  speaker-card.module.ts
src/app/components/speaker-view/: speaker-view.component.html  speaker-view.component.scss  speaker-view.component.spec.ts  speaker-view.component.ts  speaker-view.module.ts
src/app/components/sponsor-card/: sponsor-card.component.html  sponsor-card.component.scss  sponsor-card.component.spec.ts  sponsor-card.component.ts  sponsor-card.module.ts
src/app/components/sponsor-view/: sponsor-view.component.html  sponsor-view.component.scss  sponsor-view.component.spec.ts  sponsor-view.component.ts  sponsor-view.module.ts
src/app/components/swag-modal/: swag-modal-routing.module.ts  swag-modal.module.ts  swag-modal.page.html  swag-modal.page.scss  swag-modal.page.spec.ts  swag-modal.page.ts
src/app/interfaces/: BUILD.bazel  conference.interfaces.ts  user-options.ts
src/app/order-form/: order-form.module.ts  order-form.page.html  order-form.page.scss  order-form.page.spec.ts  order-form.page.ts
src/app/pages/about/: BUILD.bazel  about-routes.ts  about-routing.module.ts  about.html  about.module.ts  about.scss  about.ts
src/app/pages/about-popover/: BUILD.bazel  about-popover.html  about-popover.module.ts  about-popover.ts
src/app/pages/account/: BUILD.bazel  account-routes.ts  account-routing.module.ts  account.html  account.module.ts  account.scss  account.ts
src/app/pages/broadcasting/: broadcasting-routing.module.ts  broadcasting.html  broadcasting.module.ts  broadcasting.spec.ts  broadcasting.ts
src/app/pages/btb/: btb-routing.module.ts  btb.html  btb.module.ts  btb.scss  btb.spec.ts  btb.ts
src/app/pages/details/: details-routing.module.ts  details.module.ts  details.scss  (+1 more)
src/app/providers/: BUILD.bazel  can-deactivate-support.guard.ts  check-tutorial.guard.ts  check-tutorial.service.ts  conference-data.ts  conference.service.ts  dark-mode.service.ts  function-data.ts  session-data.ts  speaker-data.ts  support-data.ts  user-data.ts  user.service.ts
src/app/services/: agenda.service.ts  auth.service.ts  company.service.ts  data.service.spec.ts  data.service.ts  fcm.service.spec.ts  fcm.service.ts  hubspot.service.ts  push-notification.service.ts  speaker.service.ts  storage.service.ts  talk-reminder.service.ts
src/app/types/: index.ts
src/assets/: manifest.json  manifest.webmanifest
src/assets/data/: BUILD.bazel  data.json
src/assets/img/: BUILD.bazel
src/common/: urldata.ts
src/environments/: BUILD.bazel  environment.prod.ts  environment.ts  index.ts  schema.ts
src/interfaces/: user-options.ts
src/pages/about/: User.ts  about.html  about.module.ts  about.scss  about.ts
src/pages/about-popover/: about-popover.html  about-popover.module.ts  about-popover.ts
src/pages/account/: account.html  account.module.ts  account.scss  account.ts
src/pages/article/: article.ts
src/pages/home/: home.html  home.scss  home.service.ts  home.ts
src/pages/login/: login.client.ts  login.form.data.ts  login.html  login.module.ts  login.scss  login.service.ts  login.ts
src/pages/map/: map.html  map.module.ts  map.scss  map.ts
src/pages/publish/: publish.html  publish.scss  publish.service.ts  publish.ts
src/pages/qr/: qr.html  qr.ts
src/pages/schedule/: popover.ts  schedule.html  schedule.module.ts  schedule.scss  schedule.ts
src/pages/schedule-filter/: schedule-filter.html  schedule-filter.module.ts  schedule-filter.ts
src/pages/session-detail/: session-detail.html  session-detail.module.ts  session-detail.ts
src/pages/signup/: signup.html  signup.module.ts  signup.scss  signup.ts
src/pages/speaker-detail/: speaker-detail.html  speaker-detail.module.ts  speaker-detail.ts
src/pages/speaker-list/: speaker-list.html  speaker-list.module.ts  speaker-list.scss  speaker-list.ts
src/pages/support/: support.html  support.module.ts  support.scss  support.ts
src/pages/tabs/: tabs.html  tabs.module.ts  tabs.ts
src/pages/tabs-page/: tabs-page.html  tabs-page.ts
src/pages/tutorial/: tutorial.html  tutorial.module.ts  tutorial.scss  tutorial.ts
src/providers/: conference-data.ts  user-data.ts
src/theme/: BUILD.bazel  app.ios.scss  app.variables.scss  app.wp.scss  variables.scss
(+565 files in other folders)
