package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "global_scss",
    src = "global.scss",
)

ng_module(
    name = "src",
    srcs = glob(
        include = ["*.ts"],
        exclude = [
            "**/*.spec.ts",
            "main.ts",
            "test.ts",
            "initialize_testbed.ts",
        ],
    ),
    assets = [

        # "//src/app:app_scss",
        # "//src/app/pages/tabs-page:tabs-page_scss",
        # ":global_scss",
        # "//src/theme:variables_scss"
    ],
    deps = [
        "//src/app:app_module_ts",
        "//src/app/pages/account:account_module_ts",
        "//src/app/pages/login:login_module_ts",
        "//src/app/pages/signup:signup_module_ts",
        "//src/app/pages/support:support_module_ts",
        "//src/app/pages/tabs-page:tabs-page_module_ts",
        "//src/app/pages/tutorial:tutorial_module_ts",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
