package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "map_scss",
    src = "map.scss",
)

ng_module(
    name = "map_module_ts",
    srcs = [
        "map.module.ts",
        "map.ts",
        "map-routing.module.ts",
    ],
    tsconfig = "//:tsconfig.json",
    assets = [
        "map.html",
        ":map_scss",
    ],
    deps = [
        "//src/app/providers:providers",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@ionic/storage",
        "@npm//@types",
    ],
)
