package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "schedule-filter_scss",
    src = "schedule-filter.scss",
    # todo: fix Zack
#    deps = ["//src/app/pages/schedule:schedule_scss"],
)

ng_module(
    name = "schedule-filter",
    srcs = glob(["*.ts"]),
    assets = [
      ":schedule-filter_scss"
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
