package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "schedule_scss",
    src = "schedule.scss",
)

ng_module(
    name = "schedule_module_ts",
    srcs = [
#        "../schedule-filter/schedule-filter.ts",
        "schedule.module.ts",
        "schedule.ts",
        "schedule-routing.module.ts",
    ],
    deps = [
        "//src/app/pages/schedule-filter",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
