package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "session-detail_scss",
    src = "session-detail.scss",
)

ng_module(
    name = "session-detail_module_ts",
    srcs = [
        "../../providers/conference-data.ts",
        "../../providers/user-data.ts",
        "session-detail.module.ts",
        "session-detail.ts",
        "session-detail-routing.module.ts",
    ],
    assets = [
        "session-detail.html",
        ":session-detail_scss",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
