package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "speaker-detail_scss",
    src = "speaker-detail.scss",
)

ng_module(
    name = "speaker-detail_module_ts",
    srcs = [
        "../../providers/conference-data.ts",
        "speaker-detail.module.ts",
        "speaker-detail.ts",
        "speaker-detail-routing.module.ts",
    ],
    assets = [
        "speaker-detail.html",
        ":speaker-detail_scss",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
