package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "support_scss",
    src = "support.scss",
)

ng_module(
    name = "support_module_ts",
    srcs = [
        "support.module.ts",
        "support.ts",
        "support-routing.module.ts",
    ],
    assets = [
        "support.html",
        ":support_scss",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ionic/angular",
        "@npm//@types",
    ],
)
